--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "autoprefixer": "^10.4.13",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.5",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-prettier": "^4.2.1",
