--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/base": "^5.0.0-alpha.112",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@mui/system": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
