--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start",
     "type-check": "tsc",
     "generateIcons": "fantasticon ./assets/icons/converted -o ./public/icons --normalize true",
-    "oslllo-svg-fixer": "node node_modules/oslllo-svg-fixer/src/cli.js -s ./assets/icons/raw -d ./assets/icons/converted"
+    "fixIcons": "node node_modules/oslllo-svg-fixer/src/cli.js -s ./assets/icons/raw -d ./assets/icons/converted"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
